@@ -1,3 +1,5 @@
 It would be nice if the sure could set the timezone of the wiki, and have ikiwiki render the pages with that timezone.
 
 This is nice for shared hosting, and other situation where the user doesn't have control over the server timezone.
+
+> [[done]] via the ENV setting in the setup file. --[[Joey]]
